Finish queuing part of lit review; first lit rev.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,6 +28,19 @@
     author = "Papiya Bhattacharjee and Pradip Kumar Ray",
 }
 
+@article{Brailsford2013,
+    title = {Overcoming the barriers: A qualitative study of simulation adoption
+             in the {NHS}},
+    author = {Brailsford, Sally C and Bolt, Timothy B and Bucci, Giovanni and
+              Chaussalet, T M and Connell, N A and Harper, Paul R and Klein,
+              Jonathan H and Pitt, Martin and Taylor, M},
+    journal = {Journal of the Operational Research Society},
+    volume = {64},
+    number = {2},
+    pages = {157--168},
+    year = {2013},
+}
+
 @article{Collins2018,
     title = {Influence of deprivation on health care use, health care costs, and
              mortality in COPD},
@@ -105,6 +118,16 @@
     publisher = {John Wiley \& Sons},
 }
 
+@article{Fitzpatrick2019,
+    title = {Issues in Reproducible Simulation Research},
+    author = {B G Fitzpatrick},
+    year = {2019},
+    journal = {Bulletin of Mathematical Biology},
+    volume = {81},
+    pages = {1--6},
+    doi = {10.1007/s11538-018-0496-1},
+}
+
 @article{Goldenshluger2016,
     title = {Nonparametric estimation of the service time distribution in the
              {M/G/$\infty$} queue},
@@ -162,6 +185,29 @@
     number  = {3},
     pages   = {283--304},
     doi     = {10.1023/A:1009769707641},
+}
+
+@article{Ivie2018,
+    author = {Ivie, Peter and Thain, Douglas},
+    title = {Reproducibility in Scientific Computing},
+    year = {2018},
+    volume = {51},
+    number = {3},
+    doi = {10.1145/3186266},
+    journal = {ACM Computing Surveys},
+}
+
+@article{Komashie2015,
+    title = {An Integrated Model of Patient and Staff Satisfaction Using Queuing
+             Theory},
+    author = {Alexander Komashie and Ali Mousavi and P John Clarkson and Terry
+              Young},
+    year = {2015},
+    journal = {IEEE Journal of Translational Engineering in Health and
+               Medicine},
+    volume = {3},
+    pages = {1-10},
+    doi = {10.1109/JTEHM.2015.2400436},
 }
 
 @article{Kuwornu2014,
@@ -318,7 +364,7 @@
 
 @article{Sexton2016,
     title = {{GP} supply, deprivation and emergency admission to hospital for
-             {COPD} and diabetes complications in counties across {Ireland}: an
+             {COPD} and diabetes complications in counties across {Ireland}: An
              exploratory analysis},
     author = {E Sexton and D Bedford},
     year = {2016},
@@ -335,7 +381,7 @@
               -C and Roberts, C Michael and Sewell, Louise and Walker, Paul and
               Singh, Sally J},
 	title = {Socioeconomic deprivation and the outcome of pulmonary
-             rehabilitation in England and Wales},
+             rehabilitation in {England} and {Wales}},
 	volume = {72},
 	number = {6},
 	pages = {530--537},
