Fix percentages in spell table.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -190,8 +190,8 @@ The spells included in the dataset are described by the following attributes:
     \item International Classification of Diseases (ICD) codes and primary
         Healthcare Resource Group (HRG) codes from each episode.
     \item Indicators for any COPD intervention. The value for any given spell is
-        one of no intervention, pulmonary rehabilitation, specialist nursing,
-        and both interventions.
+        one of no intervention, pulmonary rehabilitation (PR), specialist
+        nursing (SN), and both interventions.
     \item Charlson Comorbidity Index (CCI) contributions from several long term
         conditions (LTCs) as well as indicators for some other conditions such
         as sepsis and obesity.
