--- a/nbs/clusters.ipynb
+++ b/nbs/clusters.ipynb
@@ -350,21 +350,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:839: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:754: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  keep = (tmp_a >= first_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:840: RuntimeWarning: invalid value encountered in less_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:755: RuntimeWarning: invalid value encountered in less_equal\n",
       "  keep &= (tmp_a <= last_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:839: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:754: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  keep = (tmp_a >= first_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:840: RuntimeWarning: invalid value encountered in less_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:755: RuntimeWarning: invalid value encountered in less_equal\n",
       "  keep &= (tmp_a <= last_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:839: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:754: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  keep = (tmp_a >= first_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:840: RuntimeWarning: invalid value encountered in less_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:755: RuntimeWarning: invalid value encountered in less_equal\n",
       "  keep &= (tmp_a <= last_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:839: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:754: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  keep = (tmp_a >= first_edge)\n",
-      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:840: RuntimeWarning: invalid value encountered in less_equal\n",
+      "/Users/henrywilde/anaconda3/lib/python3.7/site-packages/numpy/lib/histograms.py:755: RuntimeWarning: invalid value encountered in less_equal\n",
       "  keep &= (tmp_a <= last_edge)\n"
      ]
     },
@@ -1096,15 +1096,97 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Population</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>None, %</th>\n",
+       "      <td>70.941902</td>\n",
+       "      <td>80.204461</td>\n",
+       "      <td>83.420927</td>\n",
+       "      <td>65.764331</td>\n",
+       "      <td>89.743590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pulmonary rehab., %</th>\n",
+       "      <td>23.690268</td>\n",
+       "      <td>15.799257</td>\n",
+       "      <td>13.425705</td>\n",
+       "      <td>27.972399</td>\n",
+       "      <td>8.974359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spec. nursing, %</th>\n",
+       "      <td>4.161679</td>\n",
+       "      <td>3.810409</td>\n",
+       "      <td>2.866699</td>\n",
+       "      <td>4.631104</td>\n",
+       "      <td>1.282051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Both, %</th>\n",
+       "      <td>1.206150</td>\n",
+       "      <td>0.185874</td>\n",
+       "      <td>0.286670</td>\n",
+       "      <td>1.632166</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Population          0          1          2          3\n",
+       "None, %               70.941902  80.204461  83.420927  65.764331  89.743590\n",
+       "Pulmonary rehab., %   23.690268  15.799257  13.425705  27.972399   8.974359\n",
+       "Spec. nursing, %       4.161679   3.810409   2.866699   4.631104   1.282051\n",
+       "Both, %                1.206150   0.185874   0.286670   1.632166   0.000000"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cluster_intervention_proportions = pd.DataFrame({\"Population\": copd[\"intervention\"].value_counts(normalize=True)})\n",
+    "cluster_intervention_proportions = pd.DataFrame(\n",
+    "    {\"Population\": copd[\"intervention\"].value_counts(normalize=True) * 100}\n",
+    ")\n",
     "for cluster, values in copd.groupby(\"cluster\")[\"intervention\"]:\n",
     "    proportions = values.value_counts(normalize=True).reindex([\"none\", \"pr\", \"sn\", \"both\"]).fillna(0)\n",
     "    cluster_intervention_proportions[cluster] = proportions * 100\n",
     "\n",
     "new_index = [intervention_labels.get(i) + \", %\" for i in cluster_intervention_proportions.index]\n",
-    "cluster_intervention_proportions.index = new_index"
+    "cluster_intervention_proportions.index = new_index\n",
+    "\n",
+    "cluster_intervention_proportions"
    ]
   },
   {
@@ -1282,7 +1364,7 @@
        "      <td>83.42</td>\n",
        "      <td>65.76</td>\n",
        "      <td>89.74</td>\n",
-       "      <td>0.71</td>\n",
+       "      <td>70.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pulmonary rehab., %</th>\n",
@@ -1290,7 +1372,7 @@
        "      <td>13.43</td>\n",
        "      <td>27.97</td>\n",
        "      <td>8.97</td>\n",
-       "      <td>0.24</td>\n",
+       "      <td>23.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Spec. nursing, %</th>\n",
@@ -1298,7 +1380,7 @@
        "      <td>2.87</td>\n",
        "      <td>4.63</td>\n",
        "      <td>1.28</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>4.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Both, %</th>\n",
@@ -1306,7 +1388,7 @@
        "      <td>0.29</td>\n",
        "      <td>1.63</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>1.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"21\" valign=\"top\">LTC prevalence</th>\n",
@@ -1532,10 +1614,10 @@
        "                        Median no. of LTCs           3.00       1.00  \n",
        "                        Median no. of ICDs          11.00       6.00  \n",
        "                        Median CCI                  18.00       4.00  \n",
-       "Intervention prevalence None, %                     89.74       0.71  \n",
-       "                        Pulmonary rehab., %          8.97       0.24  \n",
-       "                        Spec. nursing, %             1.28       0.04  \n",
-       "                        Both, %                      0.00       0.01  \n",
+       "Intervention prevalence None, %                     89.74      70.94  \n",
+       "                        Pulmonary rehab., %          8.97      23.69  \n",
+       "                        Spec. nursing, %             1.28       4.16  \n",
+       "                        Both, %                      0.00       1.21  \n",
        "LTC prevalence          Pulmonary disease, %       100.00     100.00  \n",
        "                        Diabetes, %                 25.00      17.96  \n",
        "                        AMI, %                      16.03      12.10  \n",
