--- a/bibliography.bib
+++ b/bibliography.bib
@@ -280,7 +280,7 @@
     title = {{NHS Business Definitions: Hospital Provider Spell}},
     author = {{NHS Data Model and Dictionary}},
     url = {https://www.datadictionary.nhs.uk/data_dictionary/nhs_business_definitions/h/hospital_provider_spell_de.asp},
-    year = {2020 (accessed 2020-06-15)},
+    year = {2020 (accessed \today)},
 }
 
 @article{Olafsson2008,
@@ -412,13 +412,14 @@
     pages = {769-775},
     year = {2016},
     doi = {10.1377/hlthaff.2015.1311},
-}
+})
 
 @misc{Wilde2020,
     title = {A novel initialisation based on hospital-resident assignment for
              the k-modes algorithm},
     author = {Henry Wilde and Vincent Knight and Jonathan Gillard},
-    year = {2020},
+    year = {2020 (accessed \today)},
+    url = {https://arxiv.org/abs/2002.02701},
     eprint = {2002.02701},
     archivePrefix = {arXiv},
     primaryClass = {cs.LG},
