Resize table and adjust discussion linebreaks.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -282,17 +282,17 @@ each cluster can be summarised succinctly:
         median number of concurrent diagnoses.
 \end{itemize}
 
-The attributes listed in Table~\ref{tab:summary} can be studied beyond
-summaries such as these, however, and the figures remaining in this section aim
-to do that. In particular, the distributions for some of the clinical
-characteristics are shown in Figures~\ref{fig:los_hist}~through~\ref{fig:icds}
-for each cluster. In addition to this, each of these figures also shows the
-distribution for the same attributes but by splitting the spell population by
-intervention rather than cluster. While this classical approach (i.e.\ of
-splitting a population based on a condition or treatment) can provide some
-insight into how the different interventions are used, it has been included to
-highlight the value added by segmenting the population on a number of
-attributes.
+The attributes listed in Table~\ref{tab:summary} can be studied beyond summaries
+such as these, however, and the figures remaining in this section aim to do
+that. In particular, the distributions for some of the clinical characteristics
+are shown in Figures~\ref{fig:los_hist}~through~\ref{fig:icds} for each cluster.
+In addition to this, each of these figures also shows the distribution for the
+same attributes but by splitting the spell population by intervention rather
+than cluster. While this classical approach --- of splitting a population based
+on a condition or treatment --- can provide some insight into how the different
+interventions are used, it has been included to highlight the value added by
+segmenting the population on a number of attributes without such a prescriptive
+framework.
 
 \begin{figure}
     \centering
