Continue closing analysis of clusters.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,7 +3,7 @@
              mining},
     journal = {Annals of Operations Research},
     volume = {263},
-    pages = {453 - 477},
+    pages = {453--477},
     year = {2018},
     doi = {10.1007/s10479-017-2485-4},
     author = {Ines Verena Arnolds and Daniel Gartner},
@@ -22,7 +22,7 @@
              delivery processes in hospitals: A review and reflections",
     journal = "Computers \& Industrial Engineering",
     volume = "78",
-    pages = "299 - 312",
+    pages = "299--312",
     year = "2014",
     doi = "10.1016/j.cie.2014.04.016",
     author = "Papiya Bhattacharjee and Pradip Kumar Ray",
@@ -43,7 +43,7 @@
 
 @article{Collins2018,
     title = {Influence of deprivation on health care use, health care costs, and
-             mortality in COPD},
+             mortality in {COPD}},
     author = {Peter F Collins and Rebecca J Stratton and Ramesh J
               Kurukulaaratchy and Marinos Elia},
     journal = {International Journal of Chronic Obstructive Pulmonary Disease},
@@ -71,18 +71,33 @@
              event logs",
     journal = "Knowledge-Based Systems",
     volume = "84",
-    pages = "203 - 213",
+    pages = "203-213",
     year = "2015",
     doi = "10.1016/j.knosys.2015.04.012",
     author = "Pavlos Delias and Michael Doumpos and Evangelos Grigoroudis and
               Panagiotis Manolitzas and Nikolaos Matsatsinis",
 }
 
+@article{Divo2012,
+    author = {Divo, Miguel and Cote, Claudia and de Torres, Juan P. and
+              Casanova, Ciro and Marin, Jose M. and Pinto-Plata, Victor and
+              Zulueta, Javier and Cabrera, Carlos and Zagaceta, Jorge and
+              Hunninghake, Gary and Celli, Bartolome},
+    title = {Comorbidities and Risk of Mortality in Patients with Chronic
+             Obstructive Pulmonary Disease},
+    journal = {American Journal of Respiratory and Critical Care Medicine},
+    volume = {186},
+    number = {2},
+    pages = {155-161},
+    year = {2012},
+    doi = {10.1164/rccm.201201-0034OC},
+}
+
 @article{Djabali2018,
     author = {Djabali, Yasmina and Rabta, Boualem and Aissani, Djamil},
     year = {2018},
     month = {06},
-    pages = {507 - 531},
+    pages = {507-531},
     title = {Approximating Service-time Distributions by Phase-type
              Distributions in Single-server Queues: A Strong Stability
              Approach},
@@ -373,6 +388,18 @@
     number = {2},
     pages = {453-461},
     doi = {10.1007/s11845-015-1359-5},
+}
+
+@article{Simon2011,
+    title = {Determinants of elevated healthcare utilization in patients with
+             {COPD}},
+    author = {Tzahit Simon-Tuval and Steven M Scharf and Nimrod Maimon and
+              Barbara J Bernhard-Scharf and Haim Reuveni and Ariel Tarasiuk},
+    year = {2011},
+    journal = {Respiratory Research},
+    volume = {12},
+    number = {7},
+    doi = {10.1186/1465-9921-12-7},
 }
 
 @article{Steiner2017,
