--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 
 % Setting up the page
-\usepackage{fullpage}
+\usepackage[margin=20mm,includefoot,footskip=10mm]{geometry}
 \usepackage{setspace}
     \onehalfspacing%
 
