Fix Rebuge2012 citation.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -360,8 +360,8 @@
     number = "2",
     pages = "99 - 116",
     year = "2012",
-    doi = "https://doi.org/10.1016/j.is.2011.01.003",
-    author = "Álvaro Rebuge and Diogo R. Ferreira",
+    doi = "10.1016/j.is.2011.01.003",
+    author = "{\'A}lvaro Rebuge and Diogo R. Ferreira",
 }
 
 @inproceedings{Satopaa2011,
@@ -439,7 +439,7 @@
     pages = {769-775},
     year = {2016},
     doi = {10.1377/hlthaff.2015.1311},
-})
+}
 
 @misc{Wilde2020,
     title = {A novel initialisation based on hospital-resident assignment for
