Add citation for synthetic data; correct bibstyle.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -36,7 +36,8 @@ Section~\ref{sec:model} describes the queuing model used and the estimation of
 its parameters; Section~\ref{sec:scenarios} presents a number of what-if
 scenarios with insight provided by the model parameterisation and the
 clustering; Section~\ref{sec:conclusion} concludes the paper. Although the data
-is confidential and may not be published, the source code used in this paper is
+is confidential and may not be published, a synthetic analogue has been
+archived~\cite{Wilde2020dataset} and the source code used in this paper is
 available online at~\url{https://github.com/daffidwilde/copd-paper}.
 
 \subsection{Literature review}\label{subsec:review}
