--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,7 +11,7 @@
 
 @misc{Asanjarani2017,
     author = {Asanjarani, Azam and Nazarathy, Yoni and Pollett, Philip},
-    year = {2017},
+    year = {2017 (accessed \today)},
     title = {Parameter and State Estimation in Queues and Related Stochastic
              Models: A Bibliography},
     url = {https://people.smp.uq.edu.au/PhilipPollett/papers/Qest/QEstAnnBib.pdf}
@@ -445,11 +445,22 @@
     title = {A novel initialisation based on hospital-resident assignment for
              the k-modes algorithm},
     author = {Henry Wilde and Vincent Knight and Jonathan Gillard},
-    year = {2020 (accessed \today)},
-    url = {https://arxiv.org/abs/2002.02701},
+    year = {2020},
     eprint = {2002.02701},
     archivePrefix = {arXiv},
     primaryClass = {cs.LG},
+}
+
+@misc{Wilde2020dataset,
+  author       = {Wilde, Henry and
+                  Knight, Vincent and
+                  Gillard, Jonathan},
+  title        = {{Synthetic LOS and interarrival time data for COPD 
+                   patients in the Cwm Taf region}},
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {0.0.1},
+  doi          = {10.5281/zenodo.3908167},
 }
 
 @book{Wu2009,
