--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 
 % Bibliography and referencing
 \usepackage[numbers]{natbib}
-    \bibliographystyle{abbrvnat}
+    \bibliographystyle{abbrvurl}
 \usepackage{hyperref}
 
 % Images, tables
