Update kernel in data archive nb.

--- a/nbs/archive_data.ipynb
+++ b/nbs/archive_data.ipynb
@@ -406,7 +406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COPD paper",
+   "display_name": "copd-paper",
    "language": "python",
    "name": "copd-paper"
   },
