--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -1,42 +1,42 @@
-\begin{tabular}{llrrrrr}
+\begin{tabular}{lllllll}
 \toprule
-               &        &  Cluster &          &          &           & Population \\
-               &        &        0 &        1 &        2 &         3 &            \\
+               &        &   Cluster &             &            &           & Population \\
+               &        &         0 &           1 &          2 &         3 &            \\
 \midrule
-\textbf{Characteristics} & \textbf{Percentage of spells} &     9.91 &    19.27 &    69.39 &      1.44 &     100.00 \\
-               & \textbf{Mean spell cost, £} &  8051.23 &  2309.63 &  1508.41 &  17888.43 &    2265.40 \\
-               & \textbf{Mean age} &    75.97 &    76.68 &    70.55 &     81.36 &      72.21 \\
-               & \textbf{COPD adm. last year} &     2.19 &     1.96 &     1.88 &      2.09 &       1.93 \\
-               & \textbf{Minimum LOS} &    12.82 &    -0.00 &    -0.02 &     48.82 &      -0.02 \\
-               & \textbf{Mean LOS} &    25.30 &     6.46 &     4.11 &     75.36 &       7.68 \\
-               & \textbf{Maximum LOS} &    51.36 &    30.86 &    16.94 &    224.93 &     224.93 \\
-               & \textbf{Median no. of LTCs} &     2.00 &     3.00 &     1.00 &      3.00 &       1.00 \\
-               & \textbf{Median no. of ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &       6.00 \\
-               & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &       4.00 \\
-\textbf{Intervention prevalence} & \textbf{None, \%} &    80.20 &    83.42 &    65.76 &     89.74 &      70.94 \\
-               & \textbf{PR, \%} &    15.80 &    13.43 &    27.97 &      8.97 &      23.69 \\
-               & \textbf{SN, \%} &     3.81 &     2.87 &     4.63 &      1.28 &       4.16 \\
-               & \textbf{Both, \%} &     0.19 &     0.29 &     1.63 &      0.00 &       1.21 \\
-\textbf{LTC prevalence} & \textbf{Pulmonary disease, \%} &   100.00 &   100.00 &   100.00 &    100.00 &     100.00 \\
-               & \textbf{Diabetes, \%} &    19.05 &    28.14 &    14.84 &     25.00 &      17.96 \\
-               & \textbf{AMI, \%} &    13.85 &    22.93 &     8.76 &     16.03 &      12.10 \\
-               & \textbf{CHF, \%} &    12.45 &    53.85 &     0.00 &     26.28 &      11.99 \\
-               & \textbf{Renal disease, \%} &     7.53 &    19.54 &     1.92 &     17.95 &       6.10 \\
-               & \textbf{Cancer, \%} &     7.62 &    12.23 &     2.93 &     10.90 &       5.30 \\
-               & \textbf{Dementia, \%} &     6.88 &    21.26 &     0.00 &     26.92 &       5.17 \\
-               & \textbf{CVA, \%} &     8.64 &    13.33 &     0.70 &     19.87 &       4.20 \\
-               & \textbf{PVD, \%} &     4.37 &     7.69 &     2.27 &      5.77 &       3.57 \\
-               & \textbf{CTD, \%} &     5.11 &     4.25 &     3.11 &      4.49 &       3.54 \\
-               & \textbf{Obesity, \%} &     2.51 &     3.01 &     1.49 &      7.69 &       1.97 \\
-               & \textbf{Metastatic cancer, \%} &     1.58 &     4.49 &     0.00 &      0.64 &       1.03 \\
-               & \textbf{Paraplegia, \%} &     1.30 &     3.73 &     0.24 &      0.64 &       1.02 \\
-               & \textbf{Diabetic compl., \%} &     0.19 &     0.86 &     0.48 &      1.92 &       0.54 \\
-               & \textbf{Peptic ulcer, \%} &     1.58 &     0.81 &     0.23 &      1.28 &       0.49 \\
-               & \textbf{Sepsis, \%} &     1.77 &     0.91 &     0.15 &      1.92 &       0.48 \\
-               & \textbf{Liver disease, \%} &     0.28 &     0.48 &     0.23 &      0.00 &       0.28 \\
-               & \textbf{C. diff, \%} &     0.74 &     0.10 &     0.01 &      0.64 &       0.11 \\
-               & \textbf{Severe liver disease, \%} &     0.19 &     0.43 &     0.00 &      0.00 &       0.10 \\
-               & \textbf{MRSA, \%} &     0.28 &     0.05 &     0.03 &      1.28 &       0.07 \\
-               & \textbf{HIV, \%} &     0.00 &     0.00 &     0.03 &      0.00 &       0.02 \\
+\textbf{Characteristics} & \textbf{Percentage of spells} &   9.90701 &     19.2708 &    69.3859 &   1.43633 &        100 \\
+               & \textbf{Mean spell cost, £} &   8051.23 &     2309.63 &    1508.41 &   17888.4 &     2265.4 \\
+               & \textbf{Percentage of recorded costs} &   29.0137 &     19.3806 &    48.2048 &   3.40094 &        100 \\
+               & \textbf{Mean COPD adm. in last year} &   2.19331 &     1.96464 &     1.8819 &   2.08974 &    1.93168 \\
+               & \textbf{Minimum LOS} &   12.8229 & -0.00486111 & -0.0208333 &   48.8174 & -0.0208333 \\
+               & \textbf{Mean LOS} &   25.3024 &     6.46379 &    4.10628 &   75.3601 &    7.68393 \\
+               & \textbf{Maximum LOS} &   51.3604 &      30.859 &     16.941 &   224.928 &    224.928 \\
+               & \textbf{Median no. of LTCs} &         2 &           3 &          1 &         3 &          1 \\
+               & \textbf{Median no. of ICDs} &         9 &           8 &          5 &        11 &          6 \\
+               & \textbf{Median CCI} &         9 &          20 &          4 &        18 &          4 \\
+\textbf{Intervention prevalence} & \textbf{None, \%} &   80.2045 &     83.4209 &    65.7643 &   89.7436 &    70.9419 \\
+               & \textbf{PR, \%} &   15.7993 &     13.4257 &    27.9724 &   8.97436 &    23.6903 \\
+               & \textbf{SN, \%} &   3.81041 &      2.8667 &     4.6311 &   1.28205 &    4.16168 \\
+               & \textbf{Both, \%} &  0.185874 &     0.28667 &    1.63217 &         0 &    1.20615 \\
+\textbf{LTC prevalence} & \textbf{Pulmonary disease, \%} &       100 &         100 &        100 &       100 &        100 \\
+               & \textbf{Diabetes, \%} &    19.052 &     28.1414 &    14.8355 &        25 &    17.9634 \\
+               & \textbf{AMI, \%} &   13.8476 &     22.9336 &    8.75796 &   16.0256 &    12.0983 \\
+               & \textbf{CHF, \%} &   12.4535 &     53.8462 &          0 &   26.2821 &    11.9878 \\
+               & \textbf{Renal disease, \%} &   7.52788 &     19.5413 &     1.9241 &   17.9487 &    6.10441 \\
+               & \textbf{Cancer, \%} &   7.62082 &     12.2312 &    2.93259 &   10.8974 &    5.30338 \\
+               & \textbf{Dementia, \%} &   6.87732 &     21.2613 &          0 &   26.9231 &    5.16527 \\
+               & \textbf{CVA, \%} &   8.64312 &     13.3301 &   0.703291 &   19.8718 &    4.19851 \\
+               & \textbf{PVD, \%} &   4.36803 &     7.69231 &    2.26911 &   5.76923 &    3.57242 \\
+               & \textbf{CTD, \%} &   5.11152 &     4.25227 &     3.1051 &   4.48718 &    3.54479 \\
+               & \textbf{Obesity, \%} &   2.50929 &     3.01003 &     1.4862 &   7.69231 &    1.97035 \\
+               & \textbf{Metastatic cancer, \%} &   1.57993 &     4.49116 &          0 &  0.641026 &    1.03121 \\
+               & \textbf{Paraplegia, \%} &   1.30112 &     3.72671 &   0.238854 &  0.641026 &    1.02201 \\
+               & \textbf{Diabetic compl., \%} &  0.185874 &     0.86001 &   0.477707 &   1.92308 &   0.543228 \\
+               & \textbf{Peptic ulcer, \%} &   1.57993 &    0.812231 &   0.225584 &   1.28205 &   0.487985 \\
+               & \textbf{Sepsis, \%} &    1.7658 &    0.907788 &   0.145966 &   1.92308 &   0.478777 \\
+               & \textbf{Liver disease, \%} &   0.27881 &    0.477783 &   0.225584 &         0 &   0.276218 \\
+               & \textbf{C. diff, \%} &  0.743494 &   0.0955566 &  0.0132696 &  0.641026 &   0.110487 \\
+               & \textbf{Severe liver disease, \%} &  0.185874 &    0.430005 &          0 &         0 &    0.10128 \\
+               & \textbf{MRSA, \%} &   0.27881 &   0.0477783 &  0.0265393 &   1.28205 &   0.073658 \\
+               & \textbf{HIV, \%} &         0 &           0 &  0.0265393 &         0 &  0.0184145 \\
 \bottomrule
 \end{tabular}
