Add a transition paragraph to end of intro.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -408,3 +408,9 @@ is that patients receiving both interventions for their COPD (or either, in
 fact) have disproportionately fewer LTCs and concurrent ICDs when compared to
 the population. Aside from this, the profiles of each intervention are all very
 similar to one another.
+
+As discussed earlier, the purpose of this work is to construct a queuing model
+for the data described here. Insights have already been gained into the needs of
+the segments that have been identified in this section but in order to glean
+further insights, some parameters of the queuing model must be recovered from
+the data.
