--- a/main.tex
+++ b/main.tex
@@ -1,23 +1,31 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 % Setting up the page
-\usepackage{fullpage}
+\usepackage[margin=20mm,includefoot,footskip=10mm]{geometry}
 \usepackage{setspace}
-    \doublespacing%
+    \onehalfspacing%
 
 % Bibliography and referencing
 \usepackage[numbers]{natbib}
+    \bibliographystyle{abbrvurl}
 \usepackage{hyperref}
 
 % Images, tables
 \usepackage{graphicx}
+    \graphicspath{{img/}}
 \usepackage{booktabs}
+    \renewcommand{\arraystretch}{1.3}
+\usepackage{caption}
+\usepackage{subcaption}
 
+% Mathematics
+\usepackage{amssymb}
 
 % Custom lengths
-\newcommand{\imgwidth}{.85\textwidth}
-\newcommand{\tablewidth}{.9\textwidth}
-
+\newlength{\imgwidth}
+\setlength{\imgwidth}{.96\textwidth}
+\newlength{\halfimgwidth}
+\setlength{\halfimgwidth}{.5\imgwidth}
 
 \title{%
     Understanding COPD patients in the hospital system via administrative data
