Add optimal parameters definition.

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 
 % Mathematics, symbols
 \usepackage{amsmath}
+    \DeclareMathOperator*{\argmin}{arg\,min}
 \usepackage{pgf, interval}
     \intervalconfig{soft open fences}
 
