Streamline the scenario plot functions.

--- a/nbs/queuing.ipynb
+++ b/nbs/queuing.ipynb
@@ -619,9 +619,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "copd-paper",
    "language": "python",
-   "name": "python3"
+   "name": "copd-paper"
   },
   "language_info": {
    "codemirror_mode": {
